# nanSpeech

denoise/: README.md
features/pylibrosa/: nlibrosa.py
kaldi/: CMakeLists.txt  test-rnnoise.sh
kaldi/base/: CMakeLists.txt  kaldi-types.h  version.h
kaldi/denoise/rnnoise/: CMakeLists.txt  README.md  celt_lpc.c  common.h  denoise-rnn.cc  denoise.c  pitch.c  pitch.h  rnn.c  rnn.h  stb_fft.h
kaldi/feat/: CMakeLists.txt
kaldi/include/: rnnoise.h
kaldi/itf/: CMakeLists.txt
kaldi/matrix/: CMakeLists.txt  cblas-wrappers.h  kaldi-blas.h  kaldi-matrix.cc
kaldi/util/: CMakeLists.txt
kaldi/vad/webrtcvad/: CMakeLists.txt  apply-vad.cc  wav.h
kaldi/vad/webrtcvad/webrtc/common_audio/signal_processing/: CMakeLists.txt
kaldi/vad/webrtcvad/webrtc/common_audio/vad/: CMakeLists.txt
